<resources>
    <string name="version">false</string>
    <string name="prefs_widget_click_default">9</string>
    <string name="prefs_widget_label_click_default">6</string>
    <string name="prefs_hide_level_default">2</string>
    <string name="prefs_widget_top_default">2</string>
    <string name="prefs_widget_bottom_default">1</string>
    <string name="prefs_widget_right_default">1</string>
    <string name="prefs_widget_left_default">0</string>
    <string name="prefs_widget_center_default">0</string>
    <string name="prefs_record_rate_default">600</string>
    <string name="prefs_font_size_default">2</string>
    <string name="prefs_record_location_default">/sdcard/pmw/recordings</string>
    <string name="prefs_log_location_default">/sdcard/pmw/logs</string>
    <string name="prefs_backup_location_default">/sdcard/pmw/backups</string>
    <string name="PREFSKEY_WIDGET_LABEL">widgetLabel_</string>
    <string name="PREFSKEY_WIDGET_LABELBG">widgetLBg_</string>
    <string name="PREFSKEY_WIDGET_BG">prefKeyWidgetBg_</string>
    <string name="PREFSKEY_WIDGET_LABEL_ACTION">prefKeyWidgetLabelAction_</string>
    <string name="PREFSKEY_WIDGET_ICON">prefKeyWidgetIcon_</string>
    <string name="PREFSKEY_WIDGET_TEXT_COLOR">widgetTextColor_</string>
    <string name="PREFSKEY_WIDGET_TOP">widgetTop_</string>
    <string name="PREFSKEY_WIDGET_BOTTOM">widgetBottom_</string>
    <string name="PREFSKEY_WIDGET_ACTION">prefKeyWidgetAction_</string>
    <string name="PREFSKEY_WIDGET_SCALE">widgetScale</string>
    <string name="PREFSKEY_WIDGET_RIGHT">widgetRight_</string>
    <string name="PREFSKEY_WIDGET_LEFT">widgetLeft_</string>
    <string name="PREFSKEY_WIDGET_CENTER">widgetCenter_</string>
    <string name="PREFSKEY_WIDGET_PERCENT">widgetPercent_</string>
    <string name="PREFSKEY_SHOW_CPU">showCPU</string>
    <string name="PREFSKEY_SHOW_CPU_FREQ">showFreq</string>
    <string name="PREFSKEY_USAGE_COLOR">colorUsage</string>
    <string name="PREFSKEY_BACK_COLOR">colorBack</string>
    <string name="PREFSKEY_SHOW_MEMORY">showMemory</string>
    <string name="PREFSKEY_SHOW_SD">showSD</string>
    <string name="PREFSKEY_SHOW_INTERNAL">showInt</string>
    <string name="PREFSKEY_FONT_SIZE">fontSize</string>
    <string name="PREFSKEY_RECORD_LOCATION">recordLocation</string>
    <string name="PREFSKEY_RECORD_RATE">recordRate</string>
    <string name="PREFSKEY_RECORD_GRAPH">recordGraph</string>
    <string name="PREFSKEY_RECORD_BOOT">recordBoot</string>
    <string name="PREFSKEY_RECORD_CONTINUOUS">recordCont</string>
    <string name="PREFSKEY_IMPORT_BMW">importBMW</string>
    <string name="PREFSKEY_HIDE_LOW">hideLow</string>
    <string name="PREFSKEY_HIDE_LEVEL">hideLevel</string>
    <string name="PREFSKEY_LOG_LOCATION">logLocation</string>
    <string name="PREFSKEY_BACKUP_LOCATION">backupLocation</string>
    <string name="PREFSKEY_TEMPERATURE">prefKeyWidgetTemp</string>
    <string name="PREFSKEY_LOG_INFO_COLOR">colorLogInfo</string>
    <string name="PREFSKEY_LOG_DEBUG_COLOR">colorLogDebug</string>
    <string name="PREFSKEY_LOG_WARN_COLOR">colorLogWarn</string>
    <string name="PREFSKEY_LOG_ERROR_COLOR">colorLogError</string>
    <string name="PREFSKEY_AUTO_BACKUP">autoBackup</string>
    <string name="PREFSKEY_RESTORE_POPUP">restorePopup</string>
    <string name="PREFSKEY_LOG_FONT_SIZE">logFont</string>
    <string name="menu_graph_cut">Clip visible time</string>
    <string name="menu_graph_zoom">Zoom Factor</string>
    <string name="menu_graph_zoom_x1">No zoom</string>
    <string name="menu_graph_zoom_x2">Zoom x 2</string>
    <string name="menu_graph_zoom_x3">Zoom x 3</string>
    <string name="menu_graph_zoom_x4">Zoom x 4</string>
    <string name="menu_graph_zoom_x5">Zoom x 5</string>
    <string name="prefs_screen_widget">Widget</string>
    <string name="prefs_screen_widget_summary">"Defines selected widget look'n'feel"</string>
    <string name="prefs_screen_record_items">Items to record</string>
    <string name="prefs_screen_record_items_summary">Select data to record</string>
    <string name="prefs_category_widget">Widget Appearance</string>
    <string name="prefs_category_widget_actions">Widget Actions</string>
    <string name="prefs_category_widget_values">Widget Values</string>
    <string name="prefs_category_widget_scales">Widget Scales</string>
    <string name="prefs_category_analyzer">Analyzer Settings</string>
    <string name="prefs_log_color_info">Information logs</string>
    <string name="prefs_log_color_info_summary">Select color to use for information logs</string>
    <string name="prefs_log_color_debug">Debug logs</string>
    <string name="prefs_log_color_debug_summary">Select color to use for debug logs</string>
    <string name="prefs_log_color_warn">Warning logs</string>
    <string name="prefs_log_color_warn_summary">Select color to use for warning logs</string>
    <string name="prefs_log_color_error">Error logs</string>
    <string name="prefs_log_color_error_summary">Select color to use for error logs</string>
    <string name="prefs_title_hide_low">Hide lowest consumer</string>
    <string name="prefs_hide_low_on">Processes are hidden when total CPU utilization is below</string>
    <string name="prefs_hide_low_off">No process is hidden</string>
    <string name="prefs_record_boot">Start recorder on boot</string>
    <string name="prefs_record_boot_on">Recorder starts on boot completion</string>
    <string name="prefs_record_boot_off">Manual recording only</string>
    <string name="prefs_record_continuous">Continuous recording</string>
    <string name="prefs_record_continuous_on">Restart recording after maximum time-frame</string>
    <string name="prefs_record_continuous_off">Stops after maximum time-frame</string>
    <string name="prefs_title_import_bmw">Import battery history</string>
    <string name="prefs_import_bmw_on">BMW history will be imported when recording is saved</string>
    <string name="prefs_import_bmw_off">BMW history is not imported</string>
    <string name="prefs_title_hide_level">CPU Utilization</string>
    <string name="prefs_summary_hide_level">Maximum cpu utilization to hide process</string>
    <string name="prefs_title_record_graph">Shows live graph while recording</string>
    <string name="prefs_record_graph_on">Live graphs are displayed on main and process screens</string>
    <string name="prefs_record_graph_off">No live graph is displayed</string>
    <string name="prefs_title_show_memory_usage">Show memory usage</string>
    <string name="prefs_show_memory_usage_on">Display memory usage</string>
    <string name="prefs_show_memory_usage_off">Do not show memory usage</string>
    <string name="prefs_title_show_sd_usage">Show SD usage</string>
    <string name="prefs_show_sd_usage_on">Display SD usage</string>
    <string name="prefs_show_sd_usage_off">Do not show SD usage</string>
    <string name="prefs_title_show_internal_usage">Show internal usage</string>
    <string name="prefs_show_internal_usage_on">Display internal usage</string>
    <string name="prefs_show_internal_usage_off">Do not show internal usage</string>
    <string name="prefs_title_show_cpu_usage">Show CPU usage</string>
    <string name="prefs_show_cpu_usage_on">CPU usage is shown on top of the screen</string>
    <string name="prefs_show_cpu_usage_off">CPU usage is not shown</string>
    <string name="prefs_title_show_cpu_freq">Show CPU frequency</string>
    <string name="prefs_show_cpu_freq_on">CPU frequency is shown on top of the screen</string>
    <string name="prefs_show_cpu_freq_off">CPU frequency is not shown</string>
    <string name="prefs_title_value_percent">Memory as percent</string>
    <string name="prefs_value_percent_on">Displays percent instead of raw values</string>
    <string name="prefs_value_percent_off">Displays Mb or Gb values</string>
    <string name="prefs_title_back_color">Background grid color</string>
    <string name="prefs_summary_back_color">Select background grid color</string>
    <string name="prefs_title_usage_color">Usage base color</string>
    <string name="prefs_summary_usage_color">Select usage base color</string>
    <string name="prefs_title_widget_top">Top value</string>
    <string name="prefs_summary_widget_top">Select value to show above central icon</string>
    <string name="prefs_title_widget_bottom">Bottom value</string>
    <string name="prefs_summary_widget_bottom">Select value to show below central icon</string>
    <string name="prefs_title_widget_right">Right scale</string>
    <string name="prefs_summary_widget_right">Select value to use in the right graphic scale</string>
    <string name="prefs_title_widget_left">Left scale</string>
    <string name="prefs_summary_widget_left">Select value to use in the left graphic scale</string>
    <string name="prefs_title_widget_center">Central icon/value</string>
    <string name="prefs_summary_widget_center">Select value to replace the central icon</string>
    <string name="prefs_title_record_rate">Time-frame and Rate</string>
    <string name="prefs_summary_record_rate">Total length and snapshots rate</string>
    <string name="prefs_title_font_size">Font size</string>
    <string name="prefs_summary_font_size">Select from various font sizes</string>
    <string name="prefs_title_record_location">Auto-save location</string>
    <string name="prefs_title_log_location">Logcat location</string>
    <string name="prefs_title_backup_location">Backup location</string>
    <string name="prefs_summary_record_location">Directory to store recorded data</string>
    <string name="prefs_summary_log_location">Directory to store logcat</string>
    <string name="prefs_summary_backup_location">Directory to store app backups</string>
    <string name="prefs_title_widget_icon">Select central icon</string>
    <string name="prefs_title_widget_bg">Select background</string>
    <string name="prefs_summary_widget_bg">Change the look of the widget</string>
    <string name="prefs_title_widget_label">Shows label</string>
    <string name="prefs_title_widget_labelbg">Shows label background</string>
    <string name="prefs_widget_labelbg_on">Label has a background</string>
    <string name="prefs_widget_labelbg_off">No background under label</string>
    <string name="prefs_title_widget_click">Widget click action</string>
    <string name="prefs_summary_widget_click">Action to perform on click</string>
    <string name="prefs_title_widget_label_click">Widget label click action</string>
    <string name="prefs_summary_widget_label_click">Action to perform when label is clicked</string>
    <string name="prefs_summary_general_font_size">Font size to use everywhere by default</string>
    <string name="prefs_title_temperature">Temperature Unit</string>
    <string name="prefs_summary_temperature">Select temperature unit</string>
    <string name="prefs_scale_theme">Select theme used by scales</string>
    <string name="prefs_scale_theme_summary">Defines the theme for both left and right scales</string>
    <string name="prefs_widget_text_color">Text color</string>
    <string name="prefs_widget_text_color_summary">Select widget text color</string>
    <string name="prefs_auto_backup">Auto-backup applications</string>
    <string name="prefs_auto_backup_on">Uninstalling apps creates a backup</string>
    <string name="prefs_auto_backup_off">WARNING: No backup while uninstalling any apps</string>
    <string name="prefs_restore_popup">Restore apps popup-menu</string>
    <string name="prefs_restore_popup_on">A popup menu let you choose what to restore</string>
    <string name="prefs_restore_popup_off">Apps are restored to their original location automatically</string>
    <string name="menu_graph_minmax">Default/Adjusted min/max</string>
    <string name="menu_show_mem">Show memory consumption</string>
    <string name="menu_show_batt">Show battery consumption</string>
</resources>