<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference android:title="@string/prefs_title_record_location" android:key="@string/PREFSKEY_RECORD_LOCATION" android:summary="@string/prefs_summary_record_location" android:defaultValue="@string/prefs_record_location_default" />
    <ListPreference android:entries="@array/settings_record_rate_entries" android:title="@string/prefs_title_record_rate" android:key="@string/PREFSKEY_RECORD_RATE" android:summary="@string/prefs_summary_record_rate" android:defaultValue="@string/prefs_record_rate_default" android:entryValues="@array/settings_record_rate_values" />
    <CheckBoxPreference android:title="@string/prefs_record_boot" android:key="@string/PREFSKEY_RECORD_BOOT" android:defaultValue="false" android:summaryOn="@string/prefs_record_boot_on" android:summaryOff="@string/prefs_record_boot_off" />
    <CheckBoxPreference android:title="@string/prefs_record_continuous" android:key="@string/PREFSKEY_RECORD_CONTINUOUS" android:defaultValue="false" android:summaryOn="@string/prefs_record_continuous_on" android:summaryOff="@string/prefs_record_continuous_off" />
    <CheckBoxPreference android:title="@string/prefs_title_import_bmw" android:key="@string/PREFSKEY_IMPORT_BMW" android:defaultValue="true" android:summaryOn="@string/prefs_import_bmw_on" android:summaryOff="@string/prefs_import_bmw_off" />
    <PreferenceScreen android:title="@string/prefs_screen_record_items" android:summary="@string/prefs_screen_record_items_summary" android:fragment="ccc71.pmw.lib.pmw_settings$PrefsRecordingItems" />
    <CheckBoxPreference android:title="@string/prefs_title_record_graph" android:key="@string/PREFSKEY_RECORD_GRAPH" android:defaultValue="false" android:summaryOn="@string/prefs_record_graph_on" android:summaryOff="@string/prefs_record_graph_off" />
    <PreferenceCategory android:title="@string/prefs_category_analyzer">
        <CheckBoxPreference android:title="@string/prefs_title_hide_low" android:key="@string/PREFSKEY_HIDE_LOW" android:defaultValue="true" android:summaryOn="@string/prefs_hide_low_on" android:summaryOff="@string/prefs_hide_low_off" />
        <ListPreference android:entries="@array/settings_widget_hide_level_entries" android:title="@string/prefs_title_hide_level" android:key="@string/PREFSKEY_HIDE_LEVEL" android:summary="@string/prefs_summary_hide_level" android:dependency="@string/PREFSKEY_HIDE_LOW" android:defaultValue="@string/prefs_hide_level_default" android:entryValues="@array/settings_widget_hide_level_values" />
    </PreferenceCategory>
</PreferenceScreen>
