<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen android:title="@string/prefs_screen_widget" android:summary="@string/prefs_screen_widget_summary">
        <PreferenceCategory android:title="@string/prefs_category_widget">
            <ListPreference android:entries="@array/settings_label_entries" android:title="@string/prefs_title_widget_label" android:key="@string/PREFSKEY_WIDGET_LABEL" android:summary="prefs_widget_label_on" android:defaultValue="1" android:entryValues="@array/settings_label_values" />
            <CheckBoxPreference android:title="@string/prefs_title_widget_labelbg" android:key="@string/PREFSKEY_WIDGET_LABELBG" android:dependency="@string/PREFSKEY_WIDGET_LABEL" android:defaultValue="false" android:summaryOn="@string/prefs_widget_labelbg_on" android:summaryOff="@string/prefs_widget_labelbg_off" />
            <ListPreference android:entries="@array/settings_widget_bg_entries" android:title="@string/prefs_title_widget_bg" android:key="@string/PREFSKEY_WIDGET_BG" android:summary="@string/prefs_summary_widget_bg" android:defaultValue="6" android:entryValues="@array/settings_widget_bg_values" />
            <ListPreference android:entries="@array/settings_scale_entries" android:title="@string/prefs_scale_theme" android:key="@string/PREFSKEY_WIDGET_SCALE" android:summary="@string/prefs_scale_theme_summary" android:defaultValue="0" android:entryValues="@array/settings_scale_values" />
            <Preference android:title="@string/prefs_widget_text_color" android:key="@string/PREFSKEY_WIDGET_TEXT_COLOR" android:summary="@string/prefs_widget_text_color_summary" />
            <ListPreference android:entries="@array/settings_widget_icon_entries" android:title="@string/prefs_title_widget_icon" android:key="@string/PREFSKEY_WIDGET_ICON" android:defaultValue="8" android:entryValues="@array/settings_widget_icon_values" />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/prefs_category_widget_values">
            <CheckBoxPreference android:title="@string/prefs_title_value_percent" android:key="@string/PREFSKEY_WIDGET_PERCENT" android:defaultValue="false" android:summaryOn="@string/prefs_value_percent_on" android:summaryOff="@string/prefs_value_percent_off" />
            <ListPreference android:entries="@array/settings_wv_entries" android:title="@string/prefs_title_widget_top" android:key="@string/PREFSKEY_WIDGET_TOP" android:summary="@string/prefs_summary_widget_top" android:defaultValue="@string/prefs_widget_top_default" android:entryValues="@array/settings_wv_values" />
            <ListPreference android:entries="@array/settings_wv_entries" android:title="@string/prefs_title_widget_bottom" android:key="@string/PREFSKEY_WIDGET_BOTTOM" android:summary="@string/prefs_summary_widget_bottom" android:defaultValue="@string/prefs_widget_bottom_default" android:entryValues="@array/settings_wv_values" />
            <ListPreference android:entries="@array/settings_wv_center_entries" android:title="@string/prefs_title_widget_center" android:key="@string/PREFSKEY_WIDGET_CENTER" android:summary="@string/prefs_summary_widget_center" android:defaultValue="@string/prefs_widget_center_default" android:entryValues="@array/settings_wv_center_values" />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/prefs_category_widget_scales">
            <ListPreference android:entries="@array/settings_wv_left_entries" android:title="@string/prefs_title_widget_left" android:key="@string/PREFSKEY_WIDGET_LEFT" android:summary="@string/prefs_summary_widget_left" android:defaultValue="@string/prefs_widget_left_default" android:entryValues="@array/settings_wv_left_values" />
            <ListPreference android:entries="@array/settings_wv_left_entries" android:title="@string/prefs_title_widget_right" android:key="@string/PREFSKEY_WIDGET_RIGHT" android:summary="@string/prefs_summary_widget_right" android:defaultValue="@string/prefs_widget_right_default" android:entryValues="@array/settings_wv_right_values" />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/prefs_category_widget_actions">
            <ListPreference android:entries="@array/settings_widget_click_entries" android:title="@string/prefs_title_widget_click" android:key="@string/PREFSKEY_WIDGET_ACTION" android:summary="@string/prefs_summary_widget_click" android:defaultValue="@string/prefs_widget_click_default" android:dialogIcon="@drawable/processes1" android:entryValues="@array/settings_widget_click_values" />
            <ListPreference android:entries="@array/settings_widget_label_click_entries" android:title="@string/prefs_title_widget_label_click" android:key="@string/PREFSKEY_WIDGET_LABEL_ACTION" android:summary="@string/prefs_summary_widget_label_click" android:defaultValue="@string/prefs_widget_label_click_default" android:dialogIcon="@drawable/processes1" android:entryValues="@array/settings_widget_label_click_values" dependency="@string/PREFSKEY_WIDGET_LABEL" />
        </PreferenceCategory>
    </PreferenceScreen>
</PreferenceScreen>
