<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference android:entries="@array/settings_font_size_entries" android:title="@string/prefs_title_font_size" android:key="@string/PREFSKEY_FONT_SIZE" android:summary="@string/prefs_summary_general_font_size" android:defaultValue="@string/prefs_font_size_default" android:entryValues="@array/settings_font_size_values" />
    <Preference android:title="@string/prefs_title_back_color" android:key="@string/PREFSKEY_BACK_COLOR" android:summary="@string/prefs_summary_back_color" />
    <Preference android:title="@string/prefs_title_usage_color" android:key="@string/PREFSKEY_USAGE_COLOR" android:summary="@string/prefs_summary_usage_color" />
    <ListPreference android:entries="@array/settings_temperature_entries" android:title="@string/prefs_title_temperature" android:key="@string/PREFSKEY_TEMPERATURE" android:summary="@string/prefs_summary_temperature" android:defaultValue="0" android:entryValues="@array/settings_temperature_values" />
    <EditTextPreference android:title="@string/prefs_title_backup_location" android:key="@string/PREFSKEY_BACKUP_LOCATION" android:summary="@string/prefs_summary_backup_location" android:defaultValue="@string/prefs_backup_location_default" />
    <CheckBoxPreference android:title="@string/prefs_auto_backup" android:key="@string/PREFSKEY_AUTO_BACKUP" android:defaultValue="true" android:summaryOn="@string/prefs_auto_backup_on" android:summaryOff="@string/prefs_auto_backup_off" />
    <CheckBoxPreference android:title="@string/prefs_restore_popup" android:key="@string/PREFSKEY_RESTORE_POPUP" android:defaultValue="false" android:summaryOn="@string/prefs_restore_popup_on" android:summaryOff="@string/prefs_restore_popup_off" />
</PreferenceScreen>
