<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference android:title="@string/prefs_title_log_location" android:key="@string/PREFSKEY_LOG_LOCATION" android:summary="@string/prefs_summary_log_location" android:defaultValue="@string/prefs_log_location_default" />
    <ListPreference android:entries="@array/settings_font_size_entries" android:title="@string/prefs_title_font_size" android:key="@string/PREFSKEY_LOG_FONT_SIZE" android:summary="@string/prefs_summary_font_size" android:defaultValue="@string/prefs_font_size_default" android:entryValues="@array/settings_font_size_values" />
    <Preference android:title="@string/prefs_log_color_info_summary" android:key="@string/PREFSKEY_LOG_INFO_COLOR" android:summary="@string/prefs_log_color_info" />
    <Preference android:title="@string/prefs_log_color_debug_summary" android:key="@string/PREFSKEY_LOG_DEBUG_COLOR" android:summary="@string/prefs_log_color_debug" />
    <Preference android:title="@string/prefs_log_color_warn_summary" android:key="@string/PREFSKEY_LOG_WARN_COLOR" android:summary="@string/prefs_log_color_warn" />
    <Preference android:title="@string/prefs_log_color_error_summary" android:key="@string/PREFSKEY_LOG_ERROR_COLOR" android:summary="@string/prefs_log_color_error" />
</PreferenceScreen>
