<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/menu_graph_cut" android:visible="false" android:title="@string/menu_graph_cut" />
    <item android:id="@id/menu_graph_zoom" android:title="@string/menu_graph_zoom">
        <menu>
            <item android:id="@id/menu_graph_zoom_x1" android:title="@string/menu_graph_zoom_x1" />
            <item android:id="@id/menu_graph_zoom_x2" android:title="@string/menu_graph_zoom_x2" />
            <item android:id="@id/menu_graph_zoom_x3" android:title="@string/menu_graph_zoom_x3" />
            <item android:id="@id/menu_graph_zoom_x4" android:title="@string/menu_graph_zoom_x4" />
            <item android:id="@id/menu_graph_zoom_x5" android:title="@string/menu_graph_zoom_x5" />
        </menu>
    </item>
    <item android:id="@id/menu_graph_minmax" android:title="@string/menu_graph_minmax" />
    <item android:id="@id/menu_show_mem" android:title="@string/menu_show_mem" />
    <item android:id="@id/menu_show_batt" android:title="@string/menu_show_batt" />
</menu>
